--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 	<input id="input" type="text">
 	<input id="range" type="range" min="0" max="30" step="1" value="10">
-		<button id="gen__but" type="checkbox">generate</button>
+	<button id="gen__but">generate</button>
+	<button id="copy__but">copy</button>
 	<label>
 		<input id="ABC__box" type="checkbox" checked>
 		ABC
