--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div class="wrapper">
 			<input id="input" type="text" />
 			<label class="range__box">
+				<p class="range__index">10</p>
 				<input
 					id="range"
 					type="range"
